Updates to SBI notebook

--- a/Day4-Simulation-Based-Inference/SBI_with_MMs_SOLUTIONS.ipynb
+++ b/Day4-Simulation-Based-Inference/SBI_with_MMs_SOLUTIONS.ipynb
@@ -5,7 +5,7 @@
    "id": "7f74b648-e58f-43e8-ad78-fa67f8c0de9d",
    "metadata": {},
    "source": [
-    "# Tutorial: Modeling M&M Colors with the Multinomial Distribution and a Dirichlet Prior in Pyro\n",
+    "# Tutorial: Squirrels in the M&M Factory! \n",
     "\n",
     "##  Learning Objectives\n",
     "By the end of this tutorial, students will:\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "id": "3d36dc48-62ab-4bff-8512-87faf625fb87",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "id": "1bb495a6-c5c9-4b9d-b81e-a88327fd5786",
    "metadata": {},
    "outputs": [],
@@ -196,6 +196,46 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f966752a-3f53-4d1e-973d-2c77c72520c5",
+   "metadata": {},
+   "source": [
+    "## Posterior Predictive Checking\n",
+    "\n",
+    "Estimate the posterior predictive distribution and compare it to the distribution of successes (blue m&m's) from the class \n",
+    "\n",
+    "To calculate the posterior predictive distribution, follow these steps:\n",
+    "\n",
+    " *  draw a random value of $\\theta$ from the posterior\n",
+    " *  draw a $y$ (number of blue m&m's) from the likelihood (binomial distribution) given that value of $\\theta$\n",
+    " *  Repeat this many times.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dccd9513-e605-43a7-937d-bb944f7f2144",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fee4e390-a523-4284-ac83-cc52685e379f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c9e0ee8-3e0e-43d4-91f3-8d51ad2fffc7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
